sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
lgr = getNombreValeurs() :Int
	for ( i <- 0 to lgr) {
		if ( plusPetit(i:Int, i+1:Int) == false ){
			echange (i:Int, i+1:Int)
		} 
		else { 
		}
	}
		
		 
}

